[package]
name = "blocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1" }
bevy_egui = "0.24.0"
bevy_embedded_assets = "0.9.1"
bevy_framepace = "0.14.1"
bevy-inspector-egui = "0.22.1"
miniserde = "0.1.36"
rand = "0.8.5"
